--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -31,7 +31,7 @@
         <span class="lower-span"></span>
     </div>
     <!-- SIDEBAR -->
-    <div class="sidebar" id="sidebar">
+    <div class="sidebar active" id="sidebar">
         <!-- Only on some pages -->
         <div class="sidebar-search" id="sidebarSearch">
             <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
@@ -50,21 +50,6 @@
             <a href="/alle-tjenester/">Alle tjenester</a>
             <a href="/blogg/">Blogg</a>
             <a class="nav_order_btn" href="/for-bedrifter/">For bedrifter</a>
-        </div>
-        <div class="connect-with-us">
-            <div class="first-row">
-                <div class="social">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                </div>
-                <div class="email">
-                    <a class="mailto" href="mailto:">support@lillehammertjenester.no</a>
-                </div>
-            </div>
-            <div class="second-row">
-                <a href="/vilkaar/">Vilkår</a>
-                <a href="/policy/">Policy</a>    
-            </div>
         </div>
     </div>
 </div>
