--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -126,7 +126,7 @@
   display: unset;
   transition: 0.2s;
   padding: 10px 0;
-  overflow-y: scroll;
+  overflow-y: scroll !important;
   padding-bottom: 20px;
 }
 #mobileNav .sidebar.active {
