--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -31,7 +31,7 @@
         <span class="lower-span"></span>
     </div>
     <!-- SIDEBAR -->
-    <div class="sidebar active" id="sidebar">
+    <div class="sidebar" id="sidebar">
         <!-- Only on some pages -->
         <div class="sidebar-search" id="sidebarSearch">
             <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
