--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -231,6 +231,7 @@
   display: none;
   transition: 0.3s;
   background: rgba(190, 190, 190, 0.1);
+  overflow-y: scroll !important;
 }
 #mobileNav .sidebar .category-dropdown-mob a {
   border-bottom: 1px solid rgba(40, 40, 40, 0.1);
