--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -271,6 +271,7 @@ $txt: #183b56;
             display: none;
             transition: .3s;
             background: rgba(190,190,190,0.1);
+            overflow-y: scroll !important;
             a{
                 border-bottom: 1px solid rgba(40,40,40,0.1);
                 width: 100%;
