--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -127,6 +127,7 @@
   padding: 10px 0;
   overflow-y: scroll !important;
   padding-bottom: 20px;
+  z-index: 100000000000000000;
 }
 #mobileNav .sidebar.active {
   top: 68px;
