--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -174,6 +174,7 @@ $txt: #183b56;
         padding: 10px 0;
         overflow-y: scroll !important;
         padding-bottom: 20px;
+        z-index: 100000000000000000;
         &.active{
             top: 68px;
             right: 0;
