--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -114,7 +114,7 @@
 }
 #mobileNav .sidebar {
   background: white;
-  min-height: 120vh;
+  height: 120vh;
   position: absolute;
   top: 68px;
   right: 0;
@@ -233,6 +233,7 @@
   transition: 0.3s;
   background: rgba(190, 190, 190, 0.1);
   overflow-y: scroll !important;
+  height: 100%;
 }
 #mobileNav .sidebar .category-dropdown-mob a {
   border-bottom: 1px solid rgba(40, 40, 40, 0.1);
