--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -161,7 +161,7 @@ $txt: #183b56;
     // SIDEBAR
     .sidebar{
         background: white;
-        min-height: 120vh;
+        height: 120vh;
         position: absolute;
         top: 68px;
         right: 0;
@@ -273,6 +273,7 @@ $txt: #183b56;
             transition: .3s;
             background: rgba(190,190,190,0.1);
             overflow-y: scroll !important;
+            height: 100%;
             a{
                 border-bottom: 1px solid rgba(40,40,40,0.1);
                 width: 100%;
