--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -161,7 +161,7 @@ $txt: #183b56;
     // SIDEBAR
     .sidebar{
         background: white;
-        height: 120vh;
+        height: 110%;
         position: absolute;
         top: 68px;
         right: 0;
