--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -114,7 +114,7 @@
 }
 #mobileNav .sidebar {
   background: white;
-  height: 110%;
+  height: 900px;
   position: absolute;
   top: 68px;
   right: 0;
