--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -114,12 +114,11 @@
 }
 #mobileNav .sidebar {
   background: white;
-  height: 900px;
+  height: 110vh;
   position: absolute;
   top: 68px;
   right: 0;
   width: 100%;
-  z-index: 120;
   opacity: 0;
   pointer-events: none;
   display: unset;
@@ -135,6 +134,7 @@
   opacity: 1;
   pointer-events: visible;
   transition: 0.5s;
+  display: block;
 }
 #mobileNav .sidebar .sidebar-search {
   position: absolute;
