--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -171,7 +171,7 @@ $txt: #183b56;
         display: block;
         transition: .2s;
         padding: 10px 0;
-        overflow-y: visible !important;
+        overflow-y: scroll !important;
         padding-bottom: 20px;
         z-index: 100000000000000000;
         &.active{
