--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -267,7 +267,7 @@ $txt: #183b56;
         .category-dropdown-mob{
             position: relative;
             padding-inline: 0;
-            margin-bottom: 20px;
+            padding-bottom: 40px;
             display: none;
             transition: .3s;
             background: rgba(190,190,190,0.1);
